# BlueTTS

./: .gitignore  Dockerfile  README.md  changes.md  pyproject.toml
config/: tts.json
examples/: all_langs_and_mix.py  app.py  basic.py  english.py  german.py  hebrew.py  italian.py  mixed.py  mixed_pt.py  spanish.py  voices.md  zero_shot.py
exports/: README.md  convert_stats.py  create_tensorrt.py  export_new_voice.py  export_onnx.py  utils.py
scripts/: README.md  benchmark_trt.py  convert_stats.py  create_tensorrt.py  export_new_voice.py  export_onnx.py  hf_push_pt_models.py  utils.py
src/: _blue_vocab.py  _common.py  vocab.json
src/blue_onnx/: __init__.py  _blue_vocab.py  _common.py  style.py  vocab.json
src/blue_pt/: __init__.py  _vocab.py
src/blue_trt/: __init__.py  benchmark_trt.py
training/: README.md  __init__.py  combine_datasets.py  compute_latent_stats.py  datasets.example.json  pyproject.toml  utils.py
training/data/: audio_utils.py  text2latent_dataset.py  text_vocab.py
training/docs/: architecture_and_legacy_training.md  overview.md  stage2_text_to_latent.md  stage3_duration_predictor.md
training/dp/: README.md  builders.py  cfg_utils.py  cli.py  data_module.py  trainer.py
training/dp/models/: dp_network.py  duration_predictor.py
training/models/: utils.py
training/models/text2latent/: README.md  dp_network.py  duration_predictor.py  reference_encoder.py  text_encoder.py  vf_estimator.py
training/src/: remove_comments.py  train_duration_predictor.py  train_text_to_latent.py  utils.py
training/t2l/: README.md  builders.py  cfg_utils.py  cli.py  data_module.py  sampling.py  spfm.py  train_loop.py  trainer.py
training/t2l/models/: reference_encoder.py  text_encoder.py  vf_estimator.py
voices/: female1.json  male1.json  reference.json  reference_pt.json
