[project]
name = "lightblue-onnx"
version = "0.1.0"
description = "Hebrew Text-to-Speech inference using ONNX and TensorRT"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "onnxruntime",
    "soundfile",
    "phonemizer",
    "huggingface-hub>=0.26.0",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu",
]

# PyPI `tensorrt` defaults to CUDA 13 wheels; most driver stacks still report CUDA 12.x.
# Use `tensorrt-cu13` instead if your driver/toolkit is CUDA 13+.
tensorrt = [
    "tensorrt-cu12",
    "torch>=2.1.0",
]
export = [
    "bluecodec",
    "librosa",
    "onnx>=1.17.0",
    "onnxslim>=0.1.0",
    "safetensors>=0.4.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
]

[tool.uv]
# Repo is scripts + src packages, not a single importable `lightblue_onnx` tree (avoids uv_build errors).
package = false

[tool.uv.sources]
bluecodec = { git = "https://github.com/maxmelichov/blue-codec.git" }

[tool.pyright]
# `models.*` lives under training/; same layout as PYTHONPATH=training for scripts/export_onnx.py
extraPaths = ["training"]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

dev = [
    "ruff",
]