[project]
name = "blue-onnx"
version = "0.2.5"
description = "Hebrew Text-to-Speech inference using ONNX and TensorRT"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "onnxruntime",
    "soundfile",
    "huggingface-hub>=0.26.0",
    "renikud-onnx",
    "phonemizer-fork>=3.3.2",
    "espeakng-loader>=0.2.4",
    "onnx>=1.20.1",
    "onnxslim>=0.1.90",
]

[project.optional-dependencies]
# Intel OpenVINO EP (optional). After `uv sync --extra openvino` / `pip install "blue-onnx[openvino]"`, uninstall the
# stock CPU wheel so only one package provides `onnxruntime`: `uv pip uninstall onnxruntime` / `pip uninstall onnxruntime`.
# Linux wheels bundle OpenVINO; on Windows also install the `openvino` PyPI package per Intel docs.
openvino = [
    "onnxruntime-openvino>=1.24.0",
]
# NVIDIA CUDA build of ONNX Runtime (optional). Same as OpenVINO: remove the stock CPU wheel after install
# so only one distribution provides `onnxruntime`: `uv pip uninstall onnxruntime` / `pip uninstall onnxruntime`.
gpu = [
    "onnxruntime-gpu>=1.24.0",
]
tensorrt = [
    # "tensorrt-cu12; sys_platform == 'linux'",  # see astral-sh/uv#14313
    "torch>=2.1.0",
]
export = [
    "bluecodec",
    "librosa",
    "onnx>=1.17.0",
    "onnxslim>=0.1.0",
    "safetensors>=0.4.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
]

# Training CLIs: use `uv run python -m training.t2l.cli` / `training.dp.cli` from the full repo, not the PyPI wheel
# (the published package is inference-only).

[tool.uv]
# Repo is scripts + src packages, not a single importable `blue` package tree (avoids uv_build errors).
package = false
# Do not install `[dependency-groups] dev` on every `uv sync` (matches behavior before a proper `dev` group existed).
default-groups = []
# Default `onnxruntime` and `onnxruntime-gpu` / `onnxruntime-openvino` are mutually exclusive at import time.
conflicts = [
    [
        { extra = "openvino" },
        { extra = "gpu" },
    ],
]

[tool.uv.sources]
bluecodec = { git = "https://github.com/maxmelichov/blue-codec.git" }

[dependency-groups]
dev = [
    "ruff",
]

[tool.pyright]
# `models.*` lives under training/; same layout as PYTHONPATH=training for scripts/export_onnx.py
extraPaths = ["training"]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
