[project]
name = "blue-training"
version = "0.1.0"
description = "Blue TTS training"
requires-python = ">=3.13, <3.14"
dependencies = [
    "numpy",
    "soundfile",
    "pandas",
    "tqdm",
    "tensorboard",
    "bluecodec",
    "huggingface-hub>=1.10.0",
    "phonemizer>=3.3.0",
]

[project.optional-dependencies]
# CUDA 12.8 — stable wheels (`cu128` is PyTorch’s wheel tag for CUDA 12.8)
cu128 = ["torch>=2.1.0", "torchaudio>=2.1.0", "triton>=3.0.0"]
# CUDA 13.2 — nightly wheels (experimental); `triton` pins come from the same index
cu132 = ["torch>=2.1.0", "torchaudio>=2.1.0", "triton>=3.0.0"]

[tool.uv]
package = false
# Nightly +cu132 builds are pre-releases; triton pins are satisfied from the same PyTorch index.
prerelease = "allow"
conflicts = [
    [
        { extra = "cu128" },
        { extra = "cu132" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-nightly-cu132", extra = "cu132" },
]
torchaudio = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-nightly-cu132", extra = "cu132" },
]
# PyTorch pins git-based triton builds; they live on the same CUDA wheel indexes, not PyPI.
triton = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-nightly-cu132", extra = "cu132" },
]
bluecodec = { git = "https://github.com/maxmelichov/blue-codec.git" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly-cu132"
url = "https://download.pytorch.org/whl/nightly/cu132"
explicit = true
